round 1/Godbabe/error-output.txt
  File "submissions/Godbabe/problem1.py", line 1
    input:13,output:yes
            ^
SyntaxError: invalid syntax
